[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/btn-close-pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/img/btn-close.png" type="Texture" id=2]
[ext_resource path="res://components/SavedSessionListItem.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.705882 )

[node name="SavedSessionItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -550.0
script = ExtResource( 3 )

[node name="StartSessionButton" type="Button" parent="."]
margin_right = 970.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
text = "Title"

[node name="DeleteButton" type="TextureButton" parent="."]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[connection signal="pressed" from="StartSessionButton" to="." method="_on_StartSessionButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
